@@ -1,3 +1,8 @@
+2011-12-06  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/50622
+	* g++.dg/tree-ssa/pr50622.C: New test.
+
 2011-12-04  Uros Bizjak  <ubizjak@gmail.com>
 	    Jérémie Detrey  <Jeremie.Detrey@loria.fr>
 
